# pd-discovery-platform

./: .gitignore  README.md  clinical_correlation.py  crew.py  flow.py  parsing.py  pyproject.toml  setup_env.sh  state_management.py  test_ai_setup.py  tools.py
MCP/: __init__.py
MCP/biogrid_mcp/: __init__.py  requirements.txt
MCP/pride_mcp/: dockerfile  server.py
MCP/string_mcp/: server.py
MCP/tests/: integration_test.py  test_biogrid_mcp.py  test_docker_integration.py  test_ppx_mcp.py  test_pride_mcp.py  test_string_mcp.py
config/: agents.yaml  config.yaml  tasks.yaml
crewai_framework/: state_management.py  tools.py
crewai_framework/config/: agents.yaml  tasks.yaml
crewai_framework/crews/: pd_research_crew.py
crewai_framework/flows/: flow.py
crewai_framework/tests/: test_pd_flow.py
mcp_servers/: DOCKER_TESTING.md  README.md  __init__.py  docker-compose.yml  pyproject.toml
mcp_servers/biogrid_mcp/: server.py
mcp_servers/cross_database_mcp/: README.md  __init__.py  config.py  dockerfile  server.py
mcp_servers/ppx_mcp/: __init__.py  server.py
mcp_servers/pride_mcp/: __init__.py  server.py
mcp_servers/string_mcp/: __init__.py  server.py
mcp_servers/tests/: integration_test.py  test_biogrid_mcp.py  test_config.py  test_cross_database_mcp.py  test_docker_integration.py  test_ppx_mcp.py  test_pride_mcp.py  test_resources_protein_resources.py  test_string_mcp.py  test_tools_cross_validation_tools.py  test_tools_dopaminergic_network_tools.py  test_utils_api_client.py  test_utils_cache_manager.py  test_utils_gene_mappings.py
(+6 files in other folders)
